[add] DDD start

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,4 +1,6 @@
 {
   "alwaysUpdateLinks": true,
-  "attachmentFolderPath": "Resource"
+  "attachmentFolderPath": "Image",
+  "vimMode": false,
+  "spellcheck": true
 }
