[mod] DDD start 정리

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -2,5 +2,6 @@
   "alwaysUpdateLinks": true,
   "attachmentFolderPath": "Image",
   "vimMode": false,
-  "spellcheck": true
+  "spellcheck": true,
+  "promptDelete": false
 }
