--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,6 +1,6 @@
 {
   "accentColor": "",
-  "cssTheme": "Shimmering Focus",
+  "cssTheme": "",
   "enabledCssSnippets": [
     "header-color",
     "extended-colorschemes"
